# taigun

./: CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
docs/: epics.md  planning-status.md  spec.md  ticket-format.md
docs/decisions/: ADR-001-direct-db-writes.md  ADR-002-ticket-format.md  ADR-003-connectivity.md
docs/epics/01-infrastructure/: epic.md
docs/epics/01-infrastructure/tickets/: 001-expose-postgres-tailscale.md  002-verify-connectivity.md
docs/epics/02-scaffold/: epic.md
docs/epics/02-scaffold/tickets/: 003-initialise-package.md  004-config-module.md
docs/epics/03-parser/: epic.md
docs/epics/03-parser/tickets/: 005-ticket-dataclasses.md  006-frontmatter-parser.md  007-body-parser.md
docs/epics/04-db-layer/: epic.md
docs/epics/04-db-layer/tickets/: 008-db-connection.md  009-resolver.md  010-ref-allocation.md  011-story-writer.md  012-issue-writer.md  013-task-writer.md  014-epic-writer.md
docs/epics/05-cli/: epic.md
docs/epics/05-cli/tickets/: 015-configure-command.md  016-push-command.md  017-list-commands.md  020-projects-create-command.md
docs/epics/06-packaging/: epic.md
docs/epics/06-packaging/tickets/: 018-packaging-readme.md  019-end-to-end-test.md
docs/epics/07-integration-testing/: epic.md
docs/epics/07-integration-testing/tickets/: 021-docker-test-harness.md  022-refactor-tests-real-db.md  023-fix-bugs-to-green.md  024-jenkinsfile-uses-new-stack.md
scripts/: release.sh
taigun/: cli.py  config.py  exceptions.py  models.py  parser.py  resolver.py
taigun/db/: __init__.py  base.py  connection.py  epic.py  issue.py  lister.py  ref.py  story.py  task.py
taigun/parsers/: __init__.py  body.py  file.py  frontmatter.py
tests/: test_cli_configure.py  test_cli_list.py  test_cli_push.py  test_config.py  test_db.py  test_models.py  test_parser_body.py  test_parser_frontmatter.py  test_resolver.py
tests/db/: conftest.py  test_base.py  test_connection.py  test_epic.py  test_issue.py  test_ref.py  test_story.py  test_task.py
tests/parsers/: test_body.py  test_file.py  test_frontmatter.py
