[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "taigun"
version = "0.0.0"
description = "Write Taiga tickets directly to the database from the command line"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer==0.25.1",
    "psycopg2-binary==2.9.12",
    "python-frontmatter==1.0.0",
    "tomli-w==1.2.0",
]

[project.scripts]
taigun = "taigun.cli:app"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "python-semantic-release==9.21.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"

[tool.pytest.ini_options]
testpaths = ["tests"]
